--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,12 @@
 extends layout
 
 block content
+  
   h1 Curriculum vitae
-  p Egill Ian Guðmundsson
-  p Experimental text
+  nav 
+    ul
+      li Education
+      li Job Experience
+      li Skills
+      li Miscellaneous
+  
