--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype html
 html(lang="en")
   head
     title Egill Ian Guðmundsson CV
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/sassstyle.css')
   body
     block content
